--- a/pro06/src/main/webapp/login.html
+++ b/pro06/src/main/webapp/login.html
@@ -5,7 +5,7 @@
 <title>로그인 창</title>
 </head>
 <body>
-	<form name="frmLogin" method="get" action="login" encType="UTF-8">
+	<form name="frmLogin" method="get" action="login2" encType="UTF-8">
 	아이디 :<input type="text" name="user_id"><br>
 	비 번 :<input type="text" name="user_pw"><br>
 	<input type="submit" value="로그인"><input type="reset" value="다시입력">
