--- a/pro06/src/main/webapp/login.html
+++ b/pro06/src/main/webapp/login.html
@@ -5,7 +5,14 @@
 <title>로그인 창</title>
 </head>
 <body>
-	<form name="frmLogin" method="get" action="login2" encType="UTF-8">
+	<font size=5>get 방식 로그인</font><br>
+	<form name="frmLogin" method="get" action="login4" encType="UTF-8">
+	아이디 :<input type="text" name="user_id"><br>
+	비 번 :<input type="text" name="user_pw"><br>
+	<input type="submit" value="로그인"><input type="reset" value="다시입력">
+	</form><br>
+	<font size=5>post 방식 로그인</font><br>
+	<form name="frmLogin" method="post" action="login4" encType="UTF-8">
 	아이디 :<input type="text" name="user_id"><br>
 	비 번 :<input type="text" name="user_pw"><br>
 	<input type="submit" value="로그인"><input type="reset" value="다시입력">
