프로젝트pro09 / (쿠키와 세션) URL Rewriting 이용해 웹페이지 연동

--- a/pro09/src/main/webapp/login.html
+++ b/pro09/src/main/webapp/login.html
@@ -5,7 +5,7 @@
 <title>로그인 창</title>
 </head>
 <body>
-	<form action="login" name="frmLogin" method="post" encType="UTF-8">
+	<form action="login2" name="frmLogin" method="post" encType="UTF-8">
 		아이디 :<input type="text" name="user_id"><br>
 		비 번 :<input type="password" name="user_pw"><br>
 		<input type="submit" value="로그인">
